test/error/iocheck/err8.rzy
// Error: function is not allowed to write state

Err8 = Component
  event : slot();
  
elementary
  a : R{0,100} = 0;
  
  event : slot()
    foo();
  end

  foo = function():Boolean
    a := 42;
    return a > 10;
  end
end

